--- a/topics/2_preparing_dita_content_for_localization_in_oxygen/c_text_sorting_and_direction.dita
+++ b/topics/2_preparing_dita_content_for_localization_in_oxygen/c_text_sorting_and_direction.dita
@@ -26,7 +26,7 @@
             <title>Sorting index terms using the index-sort-as element</title>
             <p>Similarly, you can adjust the storting order of index terms by adding the
                     <codeph>index-sort-as</codeph> element:</p>
-            <codeblock id="codeblock_uyj_dbt_kpb">&lt;indexterm>&amp;#x30CF;&amp;#x30EA;&amp;#x30FC;&amp;#x30FB;&amp;#x30DD;&amp;#x30C3;&amp;#x30BF;&amp;#x30FC;&lt;/glossterm>
+            <codeblock id="codeblock_uyj_dbt_kpb">&lt;indexterm>&amp;#x30CF;&amp;#x30EA;&amp;#x30FC;&amp;#x30FB;&amp;#x30DD;&amp;#x30C3;&amp;#x30BF;&amp;#x30FC;
   &lt;index-sort-as>Harry Potter&lt;/index-sort-as>
 &lt;/indexterm></codeblock>
         </section>
@@ -37,6 +37,9 @@
                 localization, it's a best practice to specify text direction using the
                     <codeph>dir</codeph> attribute:</p>
             <codeblock id="codeblock_s3f_pft_kpb">&lt;xml:lang="ar-IQ" dir ="rtl"></codeblock>
+            <note id="note_sjc_xft_kpb"
+                conref="c_preparing_dita_code_for_localization.dita#c_localization_related_attributes/note_set_attr"
+            />
         </section>
     </conbody>
 </concept>
