Specify text direction

--- a/topics/1_writing_with_localization_in_mind/c_glossaries.dita
+++ b/topics/1_writing_with_localization_in_mind/c_glossaries.dita
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
-<concept id="c_glossaries" xml:lang="en-US">
+<concept id="c_glossaries" xml:lang="en-US" dir="ltr">
     <title>Glossaries</title>
     <shortdesc>Learn the benefits of using glossaries in your localization process.</shortdesc>
     <conbody>
