--- a/dita_localization.ditamap
+++ b/dita_localization.ditamap
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE map PUBLIC "-//OASIS//DTD DITA Map//EN" "map.dtd">
-<map>
+<map xml:lang="en-US" dir="ltr">
     <title>How to prepare DITA content for localization</title>
     <topicmeta>
         <author>Łukasz Drobnik</author>
