--- a/topics/2_preparing_dita_content_for_localization_in_oxygen/c_content_reuse.dita
+++ b/topics/2_preparing_dita_content_for_localization_in_oxygen/c_content_reuse.dita
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
-<concept id="c_content_reuse" xml:lang="en-US">
+<concept id="c_content_reuse" xml:lang="en-US" dir="ltr">
     <title>Content reuse</title>
     <shortdesc/>
     <conbody>
