--- a/topics/2_preparing_dita_content_for_localization_in_oxygen/c_preparing_dita_code_for_localization.dita
+++ b/topics/2_preparing_dita_content_for_localization_in_oxygen/c_preparing_dita_code_for_localization.dita
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
-<concept id="c_localization_related_attributes" xml:lang="en-US">
+<concept id="c_localization_related_attributes" xml:lang="en-US" dir="ltr">
     <title>Preparing DITA code for localization</title>
     <shortdesc>Learn how to prepare your DITA code for localization using the
             <codeph>xml:lang</codeph> and <codeph>translate</codeph> attributes.</shortdesc>
