--- a/topics/2_preparing_dita_content_for_localization_in_oxygen/c_content_reuse.dita
+++ b/topics/2_preparing_dita_content_for_localization_in_oxygen/c_content_reuse.dita
@@ -32,7 +32,10 @@
             <title>Handling keyrefs</title>
             <p>When used improperly, keyrefs can also lead to translation errors. You can avoid them
                 by using these tips:<ul id="ul_w43_qvt_kpb">
-                    <li/>
+                    <li>Use keyrefs for non-declinable terms, such as product names or UI
+                        terms.</li>
+                    <li>Avoid using keyrefs for common nouns.</li>
+                    <li>Treat keyrefs as proper nouns and don't use articles.</li>
                 </ul></p>
             <note id="note_rlw_htt_kpb" type="tip">To avoid translation errors, it may be a good
                 idea to <xref href="t_resolving_conrefs_and_keyrefs.dita">resolve all conrefs and
