--- a/topics/2_preparing_dita_content_for_localization_in_oxygen/c_content_reuse.dita
+++ b/topics/2_preparing_dita_content_for_localization_in_oxygen/c_content_reuse.dita
@@ -30,12 +30,14 @@
         </section>
         <section id="section_qfv_l5d_jpb">
             <title>Handling keyrefs</title>
+            <p>Keyrefs can be used for standard text or content that can change, such as product
+                names.</p>
             <p>When used improperly, keyrefs can also lead to translation errors. You can avoid them
                 by using these tips:<ul id="ul_w43_qvt_kpb">
                     <li>Use keyrefs for non-declinable terms, such as product names or UI
                         terms.</li>
                     <li>Avoid using keyrefs for common nouns.</li>
-                    <li>Treat keyrefs as proper nouns and don't use articles.</li>
+                    <li>Treat keyrefs as proper nouns and don't precede them with articles.</li>
                 </ul></p>
             <note id="note_rlw_htt_kpb" type="tip">To avoid translation errors, it may be a good
                 idea to <xref href="t_resolving_conrefs_and_keyrefs.dita">resolve all conrefs and
