--- a/topics/1_writing_with_localization_in_mind/c_translation_friendly_text.dita
+++ b/topics/1_writing_with_localization_in_mind/c_translation_friendly_text.dita
@@ -8,7 +8,7 @@
         <section id="section_efs_sfp_jpb">
             <title>Clarity</title>
             <p>A text that is easy to understand is usually also easier to translate. To make your
-                writing clearer, use these tips:</p>
+                writing clearer, use these tips:
             <ul id="ul_b5f_3gp_jpb">
                 <li>Avoid overly long sentences and paragraphs.</li>
                 <li>Repeat important words to avoid misunderstanding.<fig id="fig_ing_myp_jpb">
@@ -23,12 +23,12 @@
                     related actions.</li>
                 <li>Use words such as "and," "then," "but," "a," "the," "this," and "that" to make
                     your message clear.</li>
-            </ul>
+            </ul></p>
         </section>
         <section id="section_xv1_p3p_jpb">
             <title>Grammar</title>
             <p>You can make your text easier to understand by using certain grammatical forms. To
-                make your writing clearer, follow these rules:</p>
+                make your writing clearer, follow these rules:
             <ul id="ul_ax4_kjp_jpb">
                 <li>Express actions with verbs, not nouns.<fig id="fig_oqc_zjp_jpb">
                         <image href="../../images/writing-actions.svg" id="image_jpp_4yp_jpb"
@@ -46,7 +46,7 @@
                                 'center for cleaning magic wands.'</alt>
                         </image>
                     </fig></li>
-            </ul>
+            </ul></p>
         </section>
         <section id="section_lnc_1kp_jpb">
             <title>Formating</title>
