--- a/topics/2_preparing_dita_content_for_localization_in_oxygen/c_preparing_dita_code_for_localization.dita
+++ b/topics/2_preparing_dita_content_for_localization_in_oxygen/c_preparing_dita_code_for_localization.dita
@@ -9,8 +9,8 @@
             <title>Setting the language of topics and maps</title>
             <p>It is a best practice to specify the language of your DITA files, even if you are not
                 planning localization at the moment. To specify the language and country of a topic
-                or map, set the <codeph>xml:lang</codeph> attribute of its root element:</p>
-            <codeblock id="codeblock_gyh_4ns_kpb">&lt;concept id="c_magic_tricks_vs_the_real_thing" xml:lang="en-US"></codeblock>
+                or map, set the <codeph>xml:lang</codeph> attribute of its root element:
+                <codeblock id="codeblock_gyh_4ns_kpb">&lt;concept id="c_magic_tricks_vs_the_real_thing" xml:lang="en-US"></codeblock></p>
             <note id="note_set_attr" type="tip">To set an attribute of an element in oXygen, select
                 the element, press <uicontrol>Alt + Enter</uicontrol>, and type the name of the
                 attribute you want to set.</note>
@@ -18,10 +18,10 @@
         <section id="section_gt2_zks_kpb">
             <title>Identifying content not to be translated</title>
             <p>To identify a fragment that must not be translated, set the
-                    <codeph>translate</codeph> attribute to ""no":</p>
+                    <codeph>translate</codeph> attribute to ""no":
             <codeblock id="codeblock_id5_mqs_kpb">&lt;codeblock id="codeblock_spells" translate="no">
     let spellsLeft = 7;
-&lt;/codeblock></codeblock>
+    &lt;/codeblock></codeblock></p>
         </section>
     </conbody>
 </concept>
