--- a/topics/2_preparing_dita_content_for_localization_in_oxygen/c_project_structure.dita
+++ b/topics/2_preparing_dita_content_for_localization_in_oxygen/c_project_structure.dita
@@ -14,13 +14,13 @@
         <section id="section_tby_z4n_kpb">
             <title>Prefixes vs. folders</title>
             <p>It is common practice to prefix topic names with "c_", "t_", "r_," and "_g" for
-                concepts, tasks, references, and glossary entries, respectively. For example:</p>
+                concepts, tasks, references, and glossary entries, respectively. For example:
             <ul id="ul_irf_tqn_kpb">
                 <li><b>c_magic_wand.dita</b></li>
                 <li><b>t_how_to_cast_a_spell.dita</b></li>
                 <li><b>r_wand_specifications.dita</b></li>
                 <li><b>g_wand_shaft.dita</b></li>
-            </ul>
+            </ul></p>
             <p>For larger projects, it may be useful to create separate folders for topics of each
                 type (that is concepts, tasks, references, and glossary entries). This will make
                 managing the project easier.</p>
